scroll into view for messages, notification ... if too long, confirmation dialog fix

--- a/src/app/shared/components/confirmation-dialog/confirmation-dialog.component.css
+++ b/src/app/shared/components/confirmation-dialog/confirmation-dialog.component.css
@@ -20,8 +20,9 @@
 
 .button-container {
   display: flex;
-  justify-content: center;
+  justify-content: space-evenly;
   align-items: center;
+  width: 100%;
 }
 
 .button {
